<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/back"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Login_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/logMusicPlayer"
        android:textColor="@color/borderColor"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/cdec"
        android:src="@mipmap/mlogo1"
        app:tint="@color/borderColor" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="15dp"
        android:textColor="@color/borderColor"
        android:textColorHighlight="@color/borderColor"
        android:textColorHint="@color/borderColor" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shapeemail"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="10dp"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/borderColor"
        android:textColorHighlight="@color/borderColor"
        android:textColorHint="@color/borderColor" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shapelogin"
        android:backgroundTint="@color/borderColor"
        android:padding="15dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/login" />
</LinearLayout>